cabal-version:       2.2
name:                network-canopen
version:             0.1.0.0
synopsis:            CANOpen networking
description:         CANOpen protocol implementation
homepage:            https://github.com/DistRap/network-canopen
license:             BSD-3-Clause
license-file:        LICENSE
author:              sorki
maintainer:          srk@48.io
copyright:           2024 sorki
category:            Network
build-type:          Simple

extra-source-files:
    LICENSE
    README.md

extra-doc-files:
    CHANGELOG.md

common commons
  ghc-options:         -Wall
  default-extensions:  BinaryLiterals
                       LambdaCase
                       RecordWildCards
                       TypeApplications

library
  import:              commons
  hs-source-dirs:      src
  exposed-modules:     Network.CANOpen
                       Network.CANOpen.Serialize
                       Network.CANOpen.Types
                       Network.CANOpen.LSS.Types
                       Network.CANOpen.NMT.Types
                       Network.CANOpen.SDO
                       Network.CANOpen.SDO.Types

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cereal
                     , data-default-class
                     , QuickCheck
                     , lens
                     , mtl
                     , network-can
                     , stm
                     , transformers

  default-language:    Haskell2010

test-suite pure
  import:              commons
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Util
                       SerializeSpec
                       SDOSpec
  build-tool-depends:  hspec-discover:hspec-discover
  build-depends:       base >= 4.7 && < 5
                     , cereal
                     , hspec
                     , mtl
                     , network-can
                     , network-canopen
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DistRap/network-canopen
