cabal-version:       3.0
name:                network-canopen
version:             0.1.0.0
synopsis:            CANOpen networking
description:         CANOpen protocol implementation
homepage:            https://github.com/DistRap/network-canopen
license:             BSD-3-Clause
license-file:        LICENSE
author:              sorki
maintainer:          srk@48.io
copyright:           2024 sorki
category:            Network
build-type:          Simple

extra-source-files:
    LICENSE
    README.md

extra-doc-files:
    CHANGELOG.md

flag build-readme
  default:
    False
  description:
    Build readme example

common commons
  ghc-options:         -Wall -Wunused-packages
  default-extensions:  BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       LambdaCase
                       NumericUnderscores
                       Rank2Types
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications
                       TypeFamilies
  default-language:    Haskell2010

common execs
  ghc-options:         -threaded
                       -rtsopts
                       "-with-rtsopts -N"

library
  import:              commons
  hs-source-dirs:      src
  exposed-modules:     Network.CANOpen
                       Network.CANOpen.API
                       Network.CANOpen.FixedSize
                       Network.CANOpen.Serialize
                       Network.CANOpen.Types
                       Network.CANOpen.LSS
                       Network.CANOpen.LSS.Types
                       Network.CANOpen.NMT.Types
                       Network.CANOpen.PDO
                       Network.CANOpen.SDOClient
                       Network.CANOpen.SDO
                       Network.CANOpen.SDO.Types
                       Network.CANOpen.SubBus
                       Network.CANOpen.Test
                       Network.CANOpen.Util

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cereal
                     , generic-arbitrary
                     , QuickCheck
                     , io-classes
                     , lens
                     , network-can
                     , network-can:socketcan

  default-language:    Haskell2010

executable hcanopen-test
  import:              commons, execs
  build-depends:       base >=4.7 && <5
                     , network-canopen

  default-language:    Haskell2010
  main-is:             Test.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts -N"

test-suite pure
  import:              commons
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Util
                       SerializeSpec
                       SDOSpec
  build-tool-depends:  hspec-discover:hspec-discover
  build-depends:       base >= 4.7 && < 5
                     , cereal
                     , hspec
                     , io-classes
                     , io-sim
                     , network-can
                     , network-canopen
  default-language:    Haskell2010

executable readme
  import:              commons, execs
  if !flag(build-readme)
    buildable: False
  build-depends:
      base >=4.7 && <5
    , network-can:socketcan
    , network-canopen
  build-tool-depends:
      markdown-unlit:markdown-unlit
  main-is: README.lhs
  ghc-options: -pgmL markdown-unlit -Wall

source-repository head
  type:     git
  location: https://github.com/DistRap/network-canopen
